--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/@clr/ui/clr-ui.min.css",
+			  "src/styles.css"
             ],
             "scripts": []
           },
